# story-django

./: .env.example  .gitignore  Dockerfile  README.md  data.sqlite3  db.sqlite3  debug.ipynb  docker-compose.yaml  manage.py  migrate.py  nginx.conf  pyproject.toml  requirements.txt  scrapy.cfg  story_scrapy.ipynb  vercel.json
.github/workflows/: ci.yml  deploy.yml
common/: urls.py  views.py
scheduler/: scrapy_scheduler.py
stories/: admin.py  const.py  consts.py  models.py  pagination.py  serializers.py  urls.py  utils.py  views.py
stories/migrations/: 0001_initial.py  0002_remove_story_chapter_count_alter_story_status.py  0003_remove_story_editor.py  0004_remove_story_slug.py  0005_story_slug.py  0006_remove_chapter_chapter_title.py  0007_rename_author_name_author_name_and_more.py  0008_alter_author_name.py  0009_alter_author_name_alter_chapter_content_and_more.py  0010_alter_author_name_alter_chapter_content_and_more.py  0011_alter_story_cover_photo.py  0012_rename_author_id_story_author.py  0013_story_genres.py  0014_remove_story_genres.py  0015_rename_genre_id_storygenre_genre_and_more.py  0016_remove_readingstats_reading_stats_idx_and_more.py  0017_alter_story_status.py  0018_rename_publish_date_chapter_published_date.py  0019_rename_chapter_number_chapter_chapter_name.py  0020_remove_chapter_chapter_name_chapter_title.py  0021_genre_slug.py  0023_auto_20240308_0633.py  (+13 more)
story_scraper/: admin.py  forms.py  models.py  scrapy.cfg  urls.py  views.py
story_site/: asgi.py  consumers.py  pagination.py  routing.py  settings.py  urls.py  vercel.json  wsgi.py
(+21 files in other folders)
