[tool.poetry]
name = "story-site"
version = "0.1.0"
description = ""
authors = ["y"]
readme = "README.md"
packages = [{ include = "story_site" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
pillow = "^10.0.1"
unicode = "^2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
